--- a/public/assets/css/profileRecruiter.css
+++ b/public/assets/css/profileRecruiter.css
@@ -18,7 +18,8 @@ body {
 }
 
 .selected-tab {
-    background-color: rgb(231, 234, 238)
+    background-color: rgb(23
+    , 234, 238)
 }
 
 .year {
